# optify

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CompileFlags.cmake  Doxygen.cmake  README.md  REUSE.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: reuse_check.yaml  run_tests.yaml  static_analysis.yaml
LICENSES/: Apache-2.0.txt  MIT.txt
cmake/: OptifyConfig.cmake.in
cmake/cmkit/: .gitattributes  .gitignore  StaticAnalysis.cmake
cmake/cmkit/.github/: PULL_REQUEST_TEMPLATE.md
cmake/cmkit/.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
cmake/cmkit/.github/workflows/: reuse.yaml
cmake/cmkit/docs/source/: CompileFlags.rst  index.rst
cmake/cmkit/examples/compile_flags/: CMakeLists.txt
cmake/cmkit/examples/compile_flags/src/: sort.c
cmake/cmkit/examples/doxygen/docs/: README.md
cmake/cmkit/examples/static_analysis/: .clang-tidy  CMakeLists.txt
docs/: Doxyfile.in  requirements.txt
docs/source/: Doxygen.rst  StaticAnalysis.rst  conf.py
examples/compile_flags/: README.md
examples/doxygen/: CMakeLists.txt  README.md
examples/doxygen/docs/: Doxyfile.in
examples/doxygen/src/: sort.c
examples/static_analysis/: README.md
examples/static_analysis/src/: main.c  sort.h
include/: optify.h
src/: optify.c
tests/: CMakeLists.txt  test_foobar.c  test_optify_init.c  test_optify_parse.c
